<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="load_error">Beim Laden Nutzerdaten ist ein Fehler aufgetreten!</string>
    <string name="anzahlentries">Entries shown</string>
    <string name="settings">Settings</string>
    <string name="app_name">Lablet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_table_wizard">TableWizard</string>
    <string name="Zeilen">column</string>
    <string name="Serveradresse">save Server Address</string>
    <string name="emailspeichern">save E-Mail</string>
    <string name="passwordspeichern">save password</string>
    <string name="Spalten">row</string>
    <string name="Table_Wizard">Table Wizard</string>
    <string name="on_click">on_click</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="finished">Finish</string>
    <string name="hans">Import</string>
    <string name="server">Server:</string>
    <string name="email">E-Mail:</string>
    <string name="password">Password:</string>
    <string name="login">Login!</string>
    <string name="title">Title:</string>
    <string name="database">Databasename</string>
    <string name="content">Content:</string>
    <string name="entry_date">Entry_Date:</string>
    <string name="last_entries">Last Entries</string>
    <string name="popup">You must fill in all fields, as otherwise we cannot process your login</string>
    <string name="ok">OK</string>
    <string name="MalformedURLException">MalformedURLException</string>
    <string name="NoInternet">No Internet Available!</string>
    <string name="SBSBaseException">SBSBaseException</string>
    <string name="experiment_name">Experiment name:</string>
    <string name="experiment_description">Experiment Description:</string>
    <string name="project_name">Project name:</string>
    <string name="project_description">Project Description:</string>
    <string name="tablegeneration">Table information</string>
    <string name="takeimage">take Photo</string>
    <string name="sync_status">Sync Status:</string>
    <string name="popup2">Please fill in a valid E-mail address</string>
    <string name="popup4">Entry name must be unique!</string>
    <string name="LocalService">LocalService</string>
    <string name="local_service_stopped">local_service_stopped</string>
    <string name="local_service_started">local_service_started</string>
    <string name="local_service_connected">local_service_connected</string>
    <string name="local_service_disconnected">local_service_disconnected</string>
    <string name="keyboard">Keyboard</string>
    <string name="service_name">LocalService</string>
    <string name="active_projects_and_experiments">Active Projects and Experiments</string>
    <string name="keyboard_entry">New Keyboard Entry</string>
    <string name="experiment">Experiments</string>
    <string name="title_activity_Experiment_show">Experimente</string>
    <string name="new_entry">New Entry</string>
    <string name="popup3">Nothing to say?</string>
    <string name="generatetable">generate</string>
    <color name="table_background">#999999</color>
    <color name="white">#FFFFFF</color>
    <color name="row_background">#ffffff</color>
    <color name="text_black">#000000</color>

    <string name="new_table">New Table Entry</string>
    <string name="new_image">New Image Entry</string>
    <string name="title_activity_project_show">project_show</string>
    <string name="columns">Columns:</string>
    <string name="row">Row:</string>
    <string name="table_entry">Table_entry</string>
    <string name="cancel">cancel</string>
    <string name="questionquit">Are you sure that you want to quit?</string>
    <string name="acntivproject">Active Project:</string>
    <string name="creationdate">Creation Date</string>
    <string name="sync">Time till Sync</string>
    <string name="english">Englisch</string>
    <string name="language">Language:</string>
    <string name="deutsch">Deutsch</string>
    <string name="syncimage">status Bild</string>

    <string-array name="languages">
        <item>German</item>
        <item>English</item>
    </string-array>

</resources>
