<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

     <!-- Refresh -->
        <item android:id="@+id/action_refresh"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/last_entries"
            android:showAsAction="ifRoom" >
            <menu>
                <item
                    android:id="@+id/settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/sync"
                    android:title="@string/sync" />
            </menu>
            </item>
<item android:id="@+id/action_newentry"
android:icon="@drawable/ic_action_new_event"
android:title="@string/new_entry"
android:showAsAction="ifRoom" >
</item>
</menu>