<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/textView14"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:text="@string/anzahlentries"
                    android:id="@+id/textView15" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText7" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:id="@+id/textView16" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/languages"
                    android:id="@+id/spinner"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finished"
                    android:id="@+id/button6"
                    android:layout_span="2" />

            </TableRow>

        </TableLayout>
    </RadioGroup>

</LinearLayout>