<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textView18"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView19"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_date"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView19"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textView22"
        android:layout_below="@+id/textView21"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView23"
        android:layout_below="@+id/textView22"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_status"
        android:id="@+id/textView24"
        android:layout_below="@+id/textView23"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/textView24"
        android:layout_centerHorizontal="true"
        android:src="@drawable/richtig" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:id="@+id/textView25"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_below="@+id/textView25"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3" />
    </ScrollView>

</RelativeLayout>